Added markdown for tutorial-based format.

--- a/homography_example.ipynb
+++ b/homography_example.ipynb
@@ -4,9 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Homography Matrix Example\n",
+    "## Homography Matrix Example\n",
     "\n",
     "Source: https://towardsdatascience.com/image-processing-with-python-applying-homography-for-image-warping-84cd87d2108f"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Let's first download all the necessary libraries and modules required for this notebook."
    ]
   },
   {
@@ -21,6 +28,15 @@
     "from matplotlib.patches import Circle\n",
     "from skimage import transform\n",
     "from skimage.io import imread, imshow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Let's load an example from the provided images folder.\n",
+    "\n",
+    "Ideally, we would want to load in an image that is oriented in a non-uniform manner (i.e. image taken from a slanted angle). By doing so, we can try to retain the image structure, just from a different perspective/angle."
    ]
   },
   {
@@ -48,6 +64,15 @@
     "plt.imshow(book_img)\n",
     "plt.axis('off')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We will use the imported transform function to rotate our image.\n",
+    "\n",
+    "We are using Python-imported functions to get a sense of how these image transformations work. Ideally, we would want to build our own Homography matrices to transform the image from one plane to another in 2D -> 3D -> 2D space."
    ]
   },
   {
@@ -80,10 +105,23 @@
     "axes[1].set_title('Rotated Image')\n",
     "axes[1].axis('off')\n",
     "\n",
-    "# Better spacing\n",
+    "# Better spacing between images\n",
     "fig.tight_layout()\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We can see that there are blank spaces around the rotated image. We want to fill in these blank spaces to make the image look more natural. \n",
+    "\n",
+    "We can create a function that fills in the rotated blanked spaces. A way we can do this is to use the different modes of transformations that are also imported from the `Skimage` Python library.\n",
+    "\n",
+    "The different modes are `constant`, `edge`, `symmetric`, `reflect`, and `wrap` as shown in the code cell below. Each mode has different ways of filling in these blank spaces. It is up to the user to decide which one best suits the transformed image.\n",
+    "\n",
+    "Note: We may also want to apply these modes of transformations (if necessary) to our custom Homography examples so that we don't end up with images with these blank spaces."
    ]
   },
   {
@@ -105,21 +143,20 @@
    "source": [
     "# Now, let us try to fill in the blank spaces\n",
     "def rotate_fills(image):\n",
-    "    modes = ['constant', 'edge', 'symmetric', 'reflect', 'wrap']\n",
+    "    modes = ['constant', 'edge', 'symmetric', 'reflect', 'wrap']        # Different modes of image transformations\n",
     "    fig, ax = plt.subplots(3, 2, figsize=(18, 16), dpi=60)\n",
     "\n",
     "    for i, axis in enumerate(ax.flatten()):\n",
     "        if i == 0:\n",
     "            axis.set_title(\"Original Image\")\n",
     "            axis.imshow(image)\n",
-    "            axis.axis('off')\n",
     "\n",
     "        else:\n",
     "            axis.set_title(f'{modes[i - 1]}')\n",
-    "\n",
     "            transformed_image = transform.rotate(image, -60, mode = modes[i - 1])\n",
     "            axis.imshow(transformed_image)\n",
-    "            axis.axis('off')\n",
+    "        \n",
+    "        axis.axis('off')\n",
     "    \n",
     "    fig.tight_layout()\n",
     "\n",
@@ -131,14 +168,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### The Rotation Transformation does not seem like the best option from all the modes available. Let's try warping!"
+    "### We have seen each of the different transformation modes for rotation. However, the image does not look realistic in any of the images above. Perhaps there is a better method...? Let's try using warping instead!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Warping does take a lot more thinking and computation than simply rotation. We need to find the points of interest in the original image and our desired position of the object. "
+    "Warping involves more computational complexity than rotation. In particular, we need to find the points of interest in the original image and \"link\" them to the desired points of interest of our transformed object. \n",
+    "\n",
+    "Note that the points below are manually selected by the user. There is no direct way of addressing these points in a simpler fashion."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Our plan here is to obtain the points of interest from our input image. Then, we want to orient those same points to the new (desired) position within the same image. A visualization of this is shown below."
    ]
   },
   {
@@ -203,6 +249,7 @@
     "#                                  [500, 450],\n",
     "#                                  [650, 450]])\n",
     "\n",
+    "\n",
     "color = 'red'\n",
     "fig, ax = plt.subplots(1, 2, figsize=(15, 20), dpi=60)\n",
     "\n",
@@ -216,7 +263,7 @@
     "\n",
     "ax[0].imshow(book_img)\n",
     "\n",
-    "# Create a blank image\n",
+    "# Create a blank image with our desired point placements\n",
     "blank_img = np.ones((book_img.shape[0], book_img.shape[1]))\n",
     "ax[1].imshow(blank_img)"
    ]
@@ -225,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Apply the projective transformation to see if we get the image we desire."
+    "### Now, we have a general visualization of where we want our object to be placed. We can apply projective transformations to move the object from the input image to this new position."
    ]
   },
   {
@@ -248,7 +295,7 @@
     "projective_transform = transform.estimate_transform('projective', points_of_interest, points_of_projection)\n",
     "\n",
     "# modes = ['constant', 'edge', 'symmetric', 'reflect', 'wrap']\n",
-    "img_warp = transform.warp(book_img, projective_transform.inverse, mode = 'edge')\n",
+    "img_warp = transform.warp(book_img, projective_transform.inverse, mode = 'edge')        # 'edge' mode seems to work the best, although not great\n",
     "\n",
     "# Plot the original and warped images\n",
     "fig, axes = plt.subplots(1, 2, figsize=(8, 6))\n",
@@ -270,18 +317,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### This seems like the closest we can get to a realistic transformation using this book image. \n",
+    "### As shown, we have moved our book to the new position that we specified above.\n",
     "\n",
-    "#### The cropping may be due to the placement of the camera when taking the input image. If the edges/corners of the object are close to the frame of the image, it may be difficult to apply realistic transformations.\n",
+    "This transformation is an estimate of what the real image can look like. We can see that there are a few defects in the projective transformation -- aka the book is still slightly slanted and the edges are not filled in correctly. \n",
     "\n",
-    "#### When applying this idea to the objects that we create, it would be best to note that we should have a lot of spacing between the image of the image and the object of interest."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Now, time to get started on applying this transformation on our custom examples."
+    "We applied each of the different modes of image transformation to account for the blank spaces in the transformed image, but it seems that `edge` seems to work the best. Even with this `edge` mode, the image doesn't look particularly realistic.\n",
+    "\n",
+    "Why?\n",
+    "\n",
+    "The initial input image doesn't have much space around the corners of the book, making it difficult for our estimate to account for this tightness. In other words, since the edges/corners of the object are close to the frame of the image, applying realistic transformations is a difficult task.\n",
+    "\n",
+    "When applying these projective transformations to the objects we create, it would be best to note that we should have a lot of spacing between the image frames and the object of interest."
    ]
   }
  ],
@@ -301,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.1.0"
   }
  },
  "nbformat": 4,
