Added more to reverse rasterization

--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -441,6 +441,7 @@
     "    skew_matrix_X, skew_matrix_Y = create_skew_matrix(0)\n",
     "    warp_matrix = create_warp_matrix(1, 3)\n",
     "\n",
+    "    # Make sure order of multiplication is right since matrices aren't communicative\n",
     "    homography = functools.reduce(np.matmul, [translation_matrix, skew_matrix_X, scaling_matrix, rotation_matrix, warp_matrix])\n",
     "\n",
     "    return homography\n",
