One comment about homography matrix multiplication added.

--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -502,6 +502,7 @@
     "    warp_matrix = create_warp_matrix(1, 3)\n",
     "\n",
     "    # Combine the individual effects of transformations to create homography effect\n",
+    "    # Make sure order of multiplication is right since matrices aren't communicative\n",
     "    homography = functools.reduce(np.matmul, [translation_matrix, skew_matrix_X, scaling_matrix, rotation_matrix, warp_matrix])\n",
     "\n",
     "    return homography"
