--- a/homography_example.ipynb
+++ b/homography_example.ipynb
@@ -63,7 +63,7 @@
     "plt.figure(figsize=(8, 6), dpi=60)\n",
     "plt.imshow(book_img)\n",
     "plt.axis('off')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "source": [
     "### We can see that there are blank spaces around the rotated image. We want to fill in these blank spaces to make the image look more natural. \n",
     "\n",
-    "We can create a function that fills in the rotated blanked spaces. A way we can do this is to use the different modes of transformations that are also imported from the `Skimage` Python library.\n",
+    "We can create a function that fills in the rotated blank spaces. A way we can do this is to use the different modes of transformations that are also imported from the `Skimage` Python library.\n",
     "\n",
     "The different modes are `constant`, `edge`, `symmetric`, `reflect`, and `wrap` as shown in the code cell below. Each mode has different ways of filling in these blank spaces. It is up to the user to decide which one best suits the transformed image.\n",
     "\n",
