Revised title of rasterization process.

--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -1150,7 +1150,7 @@
     "img_homog_coord = get_homogenous_img_coordinates(img)\n",
     "img_color_map = img.flatten()\n",
     "\n",
-    "print(\"=======STARTING RASTERIZATION=========\")\n",
+    "print(\"=======COMMENCING RASTERIZATION=========\")\n",
     "raster_scan_reverse_transform(img, img_homog_coord, img_color_map, transformation_matrix)"
    ]
   },
