Raster Scan Transformation possibly completed.

--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1120,7 @@
      "output_type": "stream",
      "text": [
       "img_coordinates.shape:  (64500, 3)\n",
-      "=======STARTING RASTERIZATION=========\n",
+      "=======COMMENCING RASTERIZATION=========\n",
       "transformation.shape:  (3, 3)\n",
       "input.shape:  (64500, 3)\n",
       "Output shape:  (64500, 3)\n",
