--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "### Custom Homography Tutorial\n",
     "\n",
-    "Here, we will go over how to create custom Homography transformations to images on an in-depth level. "
+    "Here, we will go over how to create custom Homography transformations to images on an in-depth level. \n",
+    "\n",
+    "Original Tutorial by Isaac Chung and Joshua Garcia-Kimble"
    ]
   },
   {
