Added some background info on homographies and raster scan.

--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -86,8 +86,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The functions below allow us to transform objects of interest from a 3D space to a 2D space. This is only half the process since we want to transform objects from a 2D plane to another 2D plane, just from a different perspective (i.e. rotation, warping, etc.). \n",
+    "The functions below allow us to transform objects of interest from a 2D space to a 3D space, back to a 2D space. This is allows us to transform objects so that we can view them from a different perspective (i.e. rotation, warping, etc.) or point in the plane. \n",
     "\n",
+    "We will perform these transformations using the idea of **homographies**. Let us first go over what homographies are and why they are useful.\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Homographies\n",
+    "1. They are transformations that describe the relationship between two different images of the same scene, just taken from different viewpoints/perspectives.\n",
+    "\n",
+    "2. They are usually represented as square matrices where each element of the matrix represents a transformation parameter that relates the coordinates of points in one image to another.\n",
+    "\n",
+    "3. These matrices also contain homogeneous coordinates, which are points in both 2D and 3D space.\n",
+    "\n",
+    "4. They represent the mapping between points in one image to their corresponding points in another image.\n",
+    "\n",
+    "5. They are used in various different computer vision fields such as image stitching (where we have multiple images of a scene and we align these images together), camera calibration (estimating intrinsic and extrinsic parameters to align camera POVs), and augmented reality (overlay virtual objects into the real world)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We consider a range of different transformations that we can apply to an image to mimic the effects of utilizing the imported `Skimage` transformation functions."
    ]
   },
@@ -95,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### First, let's define functions that will help us plot 2D objects utilizing homographies."
+    "### Now, let's define functions that will help us plot these objects utilizing homographies."
    ]
   },
   {
@@ -437,7 +457,7 @@
     "    rotation_matrix = create_rotation_matrix_clockwise(45)      # Degrees are chosen by the user\n",
     "\n",
     "    # Translation\n",
-    "    translation_matrix = create_translation_matrix(5, 10)        # dx, dy, and dz are chosen by the user\n",
+    "    translation_matrix = create_translation_matrix(5, 10)       # dx, dy, and dz are chosen by the user\n",
     "\n",
     "    # Scale\n",
     "    scaling_matrix = create_scale_matrix(1, 2)                  # scaleX, scaleY are chosen by the user\n",
@@ -774,11 +794,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### So far, we have defined functions that applies a transformation to an image and projects the image from a 3D -> 2D space.\n",
+    "#### So far, we have defined functions that apply a transformation(s) to an image and projects the image from a 2D -> 3D -> 2D space using homographies.\n",
     "\n",
-    "#### What if we want to reverse the transformations applied to our image (to return to its original state)?\n",
+    "#### Is there another way where we can perform such transformations to achieve the same goal (without using homographies)?\n",
     "\n",
-    "#### We can develop a series of metrics and functions to apply a reverse transform!"
+    "#### We can develop a series of metrics and functions to apply a *Raster Scan Reverse Transform*!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us first describe what a Raster Scan Reverse Transform is. Let us split it up into two different terms.\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Raster Scan\n",
+    "\n",
+    "1. Raster scanning is a method used to display or process images where the image is represented as a grid of pixels, and the image is processed row by row or column by column.\n",
+    "2. Usually, the image is scanned from the top-left corner to the bottom-right corner; the image is guaranteed to be scanned sequentially.\n",
+    "3. This is a digital processing technique that allows for the transformation of an image from one coordinate system to another.\n",
+    "4. Raster scanning is more accurate than other transformation methods, less likely to cause distortion(s) in the image, and is usually very fast and efficient.\n",
+    "\n",
+    "#### Reverse Transform\n",
+    "\n",
+    "1. This transformation is applied to the raster-scanned image in the opposite direction of the original transformation.\n",
+    "2. This performs the inverse operation of the original transformation, aiming to undo its effects...\n",
+    "\n",
+    "   (i.e. if we transformed an image from 2D to 3D, we can apply a reverse transform to get the image back to a 2D coordinate system)"
    ]
   },
   {
@@ -866,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1164,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "img_coordinates.shape:  (64500, 3)\n",
+      "img_coordinates.shape:  (64500, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Plot our images in a 2D plane\n",
+    "plot_image_2D(img_affine_2D, img_color_map)\n",
+    "plot_image_2D(img_transformed_2D, img_color_map)\n",
+    "plot_image_2D(img_video_2d, img_color_map)\n",
+    "\n",
+    "# Make the image of homogenous coordinates\n",
+    "img_homog_coord = get_homogenous_img_coordinates(img)\n",
+    "img_color_map = img.flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "=======COMMENCING RASTERIZATION=========\n",
       "transformation.shape:  (3, 3)\n",
       "input.shape:  (64500, 3)\n",
@@ -1143,17 +1209,15 @@
     }
    ],
    "source": [
-    "# Plot our images in a 2D plane\n",
-    "plot_image_2D(img_affine_2D, img_color_map)\n",
-    "plot_image_2D(img_transformed_2D, img_color_map)\n",
-    "plot_image_2D(img_video_2d, img_color_map)\n",
-    "\n",
-    "# Make the image of homogenous coordinates\n",
-    "img_homog_coord = get_homogenous_img_coordinates(img)\n",
-    "img_color_map = img.flatten()\n",
-    "\n",
+    "# Here, we apply Raster Scan Reverse Transform on our input image\n",
     "print(\"=======COMMENCING RASTERIZATION=========\")\n",
-    "raster_scan_reverse_transform(img, img_homog_coord, img_color_map, transformation_matrix)"
+    "raster_scan_reverse_transform(img, img_homog_coord, img_color_map, transformation_matrix)\n",
+    "\n",
+    "# It seems that our raster scan reverse transform does not work as intended since we are getting an\n",
+    "# image that is flat...\n",
+    "\n",
+    "# We expect an image that is tilted in the 3D space (just like the image shown right before the transformation).\n",
+    "# We can see that the outputs from the homography vs. raster scan reverse transformations are not the same..."
    ]
   },
   {
@@ -1172,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1256,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/x0/9q9n7mkn07z62hr6_4xxv6hc0000gn/T/ipykernel_2962/2851629216.py:43: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "/var/folders/x0/9q9n7mkn07z62hr6_4xxv6hc0000gn/T/ipykernel_3939/2851629216.py:43: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  _ = ax.scatter(x_new, y_new, c=color_new, cmap=custom_cmap, s=50, marker='o')\n"
      ]
     },
@@ -1265,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1317,10 +1381,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1af6b29d0>"
+       "<matplotlib.collections.PathCollection at 0x1af2fe750>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
