--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -61,6 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Required libraries for our notebook\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
@@ -119,6 +120,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here are some extra sources you can use to get more insight on some of the functions provided below:\n",
+    "\n",
+    "1. More information on ColorMaps: https://matplotlib.org/stable/api/_as_gen/matplotlib.colors.LinearSegmentedColormap.html\n",
+    "2. How to articulate and compute meshgrids: https://www.geeksforgeeks.org/numpy-meshgrid-function/#:~:text=meshgrid%20function%20is%20used%20to,is%20somewhat%20inspired%20from%20MATLAB."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -150,7 +161,6 @@
     "    custom_cmap = LinearSegmentedColormap.from_list('custom', cmap_colors)\n",
     "\n",
     "    num_dimensions = 2\n",
-    "\n",
     "    num_points = int(math.sqrt(tensor.shape[0]))\n",
     "\n",
     "    # Custom threshold\n",
@@ -363,8 +373,8 @@
     "\n",
     "    # Horizontal Skew\n",
     "    skew_matrix_X = np.array([[1, skew_amt, 0],\n",
-    "                            [0, 1, 0],\n",
-    "                            [0, 0, 1]])\n",
+    "                              [0, 1, 0],\n",
+    "                              [0, 0, 1]])\n",
     "    \n",
     "    # Vertical Skew\n",
     "    skew_matrix_Y = np.array([[1, 0, 0],\n",
@@ -494,6 +504,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here are some sources on how the **functools** module works in Python:\n",
+    "\n",
+    "1. https://www.geeksforgeeks.org/functools-module-in-python/\n",
+    "2. https://docs.python.org/3/library/functools.html\n",
+    "3. https://www.scaler.com/topics/reduce-function-in-python/#"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -600,7 +621,7 @@
     "\n",
     "# Apply our homography transformation to the 3D object\n",
     "points_3D_homography = apply_transformation(points_3D_original, homography)\n",
-    "homography_determinant = np.linalg.det(homography)\n",
+    "homography_determinant = np.linalg.det(homography)                              # Compute the determinant of the matrix (lin alg)\n",
     "print(f\"Our homography's determinant: {homography_determinant}\")\n",
     "\n",
     "# Remove the third dimension of our 3D affine transformation\n",
@@ -637,7 +658,7 @@
     "    '''\n",
     "\n",
     "    (width, height) = img.shape\n",
-    "    X, Y = np.mgrid[0:width, 0:height]\n",
+    "    X, Y = np.mgrid[0:width, 0:height]      # Dense mesh-grid (returned output has same dims -- X and Y)\n",
     "\n",
     "    X = X.reshape((-1, 1))\n",
     "    Y = Y.reshape((-1, 1))\n",
@@ -749,8 +770,8 @@
     "    vector1 = coord1-coord2 \n",
     "    vector2 = coord2-coord3\n",
     "\n",
-    "    normal = np.cross(vector1, vector2)\n",
-    "    normal_unit_vec = normal / np.linalg.norm(normal)\n",
+    "    normal = np.cross(vector1, vector2)                     # Take the cross product of two vectors\n",
+    "    normal_unit_vec = normal / np.linalg.norm(normal)       # Normalize the cross product (into a unit vector)\n",
     "    return normal_unit_vec"
    ]
   },
@@ -785,7 +806,7 @@
     "    Z_DIM_INDEX = 2\n",
     "\n",
     "    z_dimension = homog_coord[:,Z_DIM_INDEX].reshape(-1, 1)\n",
-    "    projection_2D = homog_coord/z_dimension     # Simply divide the homogeneous coords by the z-dimension\n",
+    "    projection_2D = homog_coord / z_dimension     # Simply divide the homogeneous coords by the z-dimension\n",
     "\n",
     "    return projection_2D"
    ]
@@ -821,7 +842,10 @@
     "1. This transformation is applied to the raster-scanned image in the opposite direction of the original transformation.\n",
     "2. This performs the inverse operation of the original transformation, aiming to undo its effects...\n",
     "\n",
-    "   (i.e. if we transformed an image from 2D to 3D, we can apply a reverse transform to get the image back to a 2D coordinate system)"
+    "   (i.e. if we transformed an image from 2D to 3D, we can apply a reverse transform to get the image back to a 2D coordinate system)\n",
+    "\n",
+    "3. Raster Scan, on its own, may miss some coordinate points (or \"pixels) during its scanning process; in other words, some points in the output \n",
+    "   space may not get mapped to the points from the input plane. However, the reverse transform ensures that there are no missed points."
    ]
   },
   {
@@ -1005,7 +1029,7 @@
     "\n",
     "# Resize the img if needed\n",
     "resize_factor = 1.0                         \n",
-    "img = cv2.resize(img, (int(img.shape[0]*resize_factor), int(img.shape[1]*resize_factor)))\n",
+    "img = cv2.resize(img, (int(img.shape[0] * resize_factor), int(img.shape[1] * resize_factor)))\n",
     "\n",
     "# Make the image of homogenous coordinates\n",
     "img_homog_coords = get_homogenous_img_coordinates(img)\n",
@@ -1217,7 +1241,9 @@
     "# image that is flat...\n",
     "\n",
     "# We expect an image that is tilted in the 3D space (just like the image shown right before the transformation).\n",
-    "# We can see that the outputs from the homography vs. raster scan reverse transformations are not the same..."
+    "# We can see that the outputs from the homography vs. raster scan reverse transformations are not the same...\n",
+    "\n",
+    "# We can continue to explore how to improve our Raster Scan Reverse Transform Function or we can abandon it for now."
    ]
   },
   {
