Added extra sources for the user to explore.

--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -102,7 +102,14 @@
     "\n",
     "4. They represent the mapping between points in one image to their corresponding points in another image.\n",
     "\n",
-    "5. They are used in various different computer vision fields such as image stitching (where we have multiple images of a scene and we align these images together), camera calibration (estimating intrinsic and extrinsic parameters to align camera POVs), and augmented reality (overlay virtual objects into the real world)."
+    "5. They are used in various different computer vision fields such as image stitching (where we have multiple images of a scene and we align these images together), camera calibration (estimating intrinsic and extrinsic parameters to align camera POVs), and augmented reality (overlay virtual objects into the real world).\n",
+    "\n",
+    "##### Additional information about Homographies are provided here:\n",
+    "1. homography_example.pynb file in the same directory.\n",
+    "2. OpenCV Guide on Homographies: https://docs.opencv.org/4.x/d9/dab/tutorial_homography.html\n",
+    "3. Image Processing using Homographies: https://mattmaulion.medium.com/homography-transform-image-processing-eddbcb8e4ff7\n",
+    "4. Another perspective on Homographies: https://www.sciencedirect.com/topics/engineering/homography\n",
+    "5. Object Tracking using Homographies: https://www.geeksforgeeks.org/python-opencv-object-tracking-using-homography/"
    ]
   },
   {
@@ -845,7 +852,13 @@
     "   (i.e. if we transformed an image from 2D to 3D, we can apply a reverse transform to get the image back to a 2D coordinate system)\n",
     "\n",
     "3. Raster Scan, on its own, may miss some coordinate points (or \"pixels) during its scanning process; in other words, some points in the output \n",
-    "   space may not get mapped to the points from the input plane. However, the reverse transform ensures that there are no missed points."
+    "   space may not get mapped to the points from the input plane. However, the reverse transform ensures that there are no missed points.\n",
+    "\n",
+    "\n",
+    "##### Additional Sources on Raster Scan (Reverse) Transformations\n",
+    "1. Raster Scan in Computer Graphics: https://www.youtube.com/watch?v=OfjKRZK4olg\n",
+    "2. GeeksForGeeks Explanation of Raster Scan: https://www.geeksforgeeks.org/what-is-raster-scan-display-mechanism/\n",
+    "3. Real-life Applications of Raster Scan: https://academic-accelerator.com/encyclopedia/raster-scan"
    ]
   },
   {
