Pulled Larry's Changes.

--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -1065,8 +1065,7 @@
     "plot_image_2D(img_affine_2D, img_color_map)\n",
     "plot_image_2D(img_homography_2D, img_color_map)\n",
     "plot_image_2D(img_transformed_2D, img_color_map)\n",
-    "plot_image_2D(img_transformed2_2D, img_color_map)\n",
-    "\n"
+    "plot_image_2D(img_transformed2_2D, img_color_map)"
    ]
   },
   {
@@ -1305,8 +1304,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "# Here, we apply Raster Scan Reverse Transform on our input image\n",
     "print(\"=======COMMENCING RASTERIZATION=========\")\n",
     "\n",
@@ -1472,9 +1469,7 @@
     "# img1_transformed = apply_transformation(img1_homog_coords, M)\n",
     "# img1_transformed_2D = project_to_2D(img1_transformed)\n",
     "\n",
-    "# plot_image_2D(img1_transformed_2D, img1_color_map)\n",
-    "\n",
-    "\n"
+    "# plot_image_2D(img1_transformed_2D, img1_color_map)"
    ]
   },
   {
@@ -1714,13 +1709,6 @@
     "ax[1].imshow(tf_img)\n",
     "ax[1].scatter(dst_2[:,0], dst_2[:,1], c='red', s=10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
