--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -1328,6 +1328,7 @@
     }
    ],
    "source": [
+    "# Threshold for the number of matches made in order for matcher to be valid\n",
     "MIN_MATCH_COUNT = 10\n",
     "\n",
     "# Read the image from Perspective 1\n",
