Finalized Homography Example.

--- a/homography_example.ipynb
+++ b/homography_example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Homography Matrix Example\n",
+    "## Homography and Projective Transformations Example\n",
     "\n",
     "Source: https://towardsdatascience.com/image-processing-with-python-applying-homography-for-image-warping-84cd87d2108f"
    ]
@@ -27,7 +27,7 @@
     "\n",
     "from matplotlib.patches import Circle\n",
     "from skimage import transform\n",
-    "from skimage.io import imread, imshow"
+    "from skimage.io import imread"
    ]
   },
   {
@@ -117,11 +117,13 @@
    "source": [
     "### We can see that there are blank spaces around the rotated image. We want to fill in these blank spaces to make the image look more natural. \n",
     "\n",
-    "We can create a function that fills in the rotated blank spaces. A way we can do this is to use the different modes of transformations that are also imported from the `Skimage` Python library.\n",
+    "These blank spaces are normal since we did not create any new information using the pixels (points in our image) we were given. Hence, the rest of the space are defaulted to having no color (i.e. blank spaces).\n",
     "\n",
-    "The different modes are `constant`, `edge`, `symmetric`, `reflect`, and `wrap` as shown in the code cell below. Each mode has different ways of filling in these blank spaces. It is up to the user to decide which one best suits the transformed image.\n",
+    "We can create a function that fills in the rotated blank spaces. In essence, we want to use the pixels that we have leftover (after the transformation) to create new information that helps us fill in the blank spaces.\n",
     "\n",
-    "Note: We may also want to apply these modes of transformations (if necessary) to our custom Homography examples so that we don't end up with images with these blank spaces."
+    "A way we can do this is to use the different modes of transformations that are also imported from the `Skimage` Python library.\n",
+    "\n",
+    "The different modes are `constant`, `edge`, `symmetric`, `reflect`, and `wrap` as shown in the code cell below. Each mode has different ways of filling in these blank spaces. It is up to the user to decide which one best suits the transformed image."
    ]
   },
   {
@@ -146,6 +148,7 @@
     "    modes = ['constant', 'edge', 'symmetric', 'reflect', 'wrap']        # Different modes of image transformations\n",
     "    fig, ax = plt.subplots(3, 2, figsize=(18, 16), dpi=60)\n",
     "\n",
+    "    # Plot the effects of applying the different modes of transformations\n",
     "    for i, axis in enumerate(ax.flatten()):\n",
     "        if i == 0:\n",
     "            axis.set_title(\"Original Image\")\n",
@@ -184,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Our plan here is to obtain the points of interest from our input image. Then, we want to orient those same points to the new (desired) position within the same image. A visualization of this is shown below."
+    "### Our plan here is to obtain the points of interest from our input image. Then, we want to orient those same points to a new coordinate plane for the object of interest (i.e. a book). A visualization of this is shown below."
    ]
   },
   {
@@ -272,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now, we have a general visualization of where we want our object to be placed. We can apply projective transformations to move the object from the input image to this new position."
+    "### Now, we have a general visualization of where we want our object to be placed. We can apply projective transformations to move the object from the input space to this new coordinate plane."
    ]
   },
   {
@@ -292,6 +295,7 @@
     }
    ],
    "source": [
+    "# Imported projective transformation using our points of interest (and projection)\n",
     "projective_transform = transform.estimate_transform('projective', points_of_interest, points_of_projection)\n",
     "\n",
     "# modes = ['constant', 'edge', 'symmetric', 'reflect', 'wrap']\n",
@@ -327,7 +331,20 @@
     "\n",
     "The initial input image doesn't have much space around the corners of the book, making it difficult for our estimate to account for this tightness. In other words, since the edges/corners of the object are close to the frame of the image, applying realistic transformations is a difficult task.\n",
     "\n",
-    "When applying these projective transformations to the objects we create, it would be best to note that we should have a lot of spacing between the image frames and the object of interest."
+    "Additionally, we have lost some pixels (i.e. points in our input space) due to our transformation. Hence, we had to make estimates about which points would help us fill in the blank spaces that were created; in other words, we created new information that is not guaranteed to be accurate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### So far, we have gone through a simple example of how projective transformations work using ``homographies``. \n",
+    "\n",
+    "This is a good starter notebook to get a basic sense of how these transformations can be applied in different types of input images. \n",
+    "\n",
+    "We are now ready to dive deeper. The ``transformations`` notebook in the same directory provides an in-depth analysis on how we can create our own homographies, including what is going on under the hood of many of the functions we provided above. \n",
+    "\n",
+    "We can also get a sense of how these transformations are used in the real world and why they are important for a plethora of computer vision tasks."
    ]
   }
  ],
